@@ -18,6 +18,7 @@ Version 2.0.3
    - Removed messages that are no longer necessary
    - Bugfix: return value of main
    - Output of "--help" restructured
+   - Code for saving the configuration file cleaned up
 
 Version 2.0.2
  * Some cosmetic fixes
